# octotiger

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  AUTHORS  CITATION.cff  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  _config.yml  analysis  build_octotiger.sh  buildo.sh  circle.yml  jenkinsfile  moving_star.sh  paper.bib  paper.md  plot-results.plt  scenario1.txt  scf.init  smic.sh  smic_script.sh  spack.yaml  test2.sh  verification_and_scaling_test.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  cff-validator.yml
analysis_src/: analysis.cpp
circle_ci_scripts/: build-Vc.sh  build-boost.sh  build-cmake.sh  build-hdf5.sh  build-hpx.sh  build-octotiger.sh  build-silo.sh
cmake/: DownloadTestReference.cmake  FileSizeTest.cmake  FindHDF5.cmake  FindSilo.cmake
debug/: makefile  run_script.sh  sources.mk
doc/: CMakeLists.txt  conf.doxy.in  science.tex  silo_format.tex
doc/content/: build-instructions.md  cmake-options.md  daint-build-instructions.md  install-instructions.md  program-options.md  publications.md
doc/html/: annotated.html  channel_8hpp_source.html  classanalytic__t-members.html  classanalytic__t.html  classchannel-members.html  classchannel.html  classcubic__table-members.html  classcubic__table.html  classes.html  classgeo_1_1dimension-members.html  classgeo_1_1dimension.html  classgeo_1_1direction-members.html  classgeo_1_1direction.html  classgeo_1_1face-members.html  classgeo_1_1face.html  classgeo_1_1geo__type-members.html  classgeo_1_1geo__type.html  classgeo_1_1octant-members.html  classgeo_1_1octant.html  classgeo_1_1quadrant-members.html  classgeo_1_1quadrant.html  classgeo_1_1side-members.html  classgeo_1_1side.html  classgrid-members.html  classgrid.html  classhpx_1_1util_1_1container__device-members.html  classhpx_1_1util_1_1container__device.html  classhydro__computer.html  classinteraction__type-members.html  classinteraction__type.html  classnode__client-members.html  classnode__client.html  classnode__location-members.html  classnode__location.html  classnode__server-members.html  classnode__server.html  classoptions-members.html  classoptions.html  classspace__vector__gen-members.html  classspace__vector__gen.html  (+122 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+6 more)
docs/: bryce_octotiger_notes.md  taylor_indicies.md
frontend/: frontend-helper.cpp  frontend-helper.hpp  init_methods.cpp  main.cpp
misc/: silo_read.cpp
octotiger/: aggregation_util.hpp  channel.hpp  compute_factor.hpp  config.hpp  const.hpp  container_device.hpp  containers.hpp  defs.hpp  diagnostics.hpp  eos.hpp  future.hpp  geometry.hpp  grid.hpp  grid_flattened_indices.hpp  grid_fmm.hpp  grid_scf.hpp  hydro_defs.hpp  interaction_types.hpp  lane_emden.hpp  matrix.hpp  node_client.hpp  node_location.hpp  node_registry.hpp  node_server.hpp  options.hpp  options_enum.hpp  particles.hpp  physcon.hpp  print.hpp  problem.hpp  profiler.hpp  real.hpp  roe.hpp  safe_math.hpp  (+12 more)
test_problems/: CMakeLists.txt  test_sod.sh
test_problems/amr/: amr.ini
test_problems/blast/: CMakeLists.txt  blast.ini  test.sh
test_problems/marshak/: CMakeLists.txt  marshak.ini  test.sh
test_problems/radiation/: CMakeLists.txt
test_problems/rotating_star/: CMakeLists.txt  make_bin.cpp  paper_test.ini  rotating_star.ini  rotating_star.rad.ini  test.sh
test_problems/rotating_star/rotating_star_paper/rs_2_w/: config.ini  job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_2_wo/: config.ini  job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_3_w/: config.ini  job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_3_wo/: config.ini  job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_4_w/: job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_4_wo/: config.ini  job_script.sh
test_problems/rotating_star/rotating_star_paper/rs_4_wo/rs_4_w/: rs_4_w.ini
test_problems/sod/: CMakeLists.txt  sod.ini  sod_big.ini  test.sh
test_problems/sphere/: CMakeLists.txt  gravity_test.sh  sphere.ini  test.sh
test_problems/star/: CMakeLists.txt  star.ini
tools/: CMakeLists.txt  fetch-distributed-results-from-cori.sh  fetch-node-level-results-from-cori.sh  fetch-results-from-cori.sh  node-level-scaling-2017-01-13.tar  node-level-scaling-2017-01-23.tar  node-level-scaling-2017-02-16-gcc.tar  node-level-scaling-2017-02-16-intel.tar  node-level-scaling-graph.py  node-level-scaling-latest.tar  node-level-scaling.tar  run-all-scaling-experiments-single-node.sh  run-distributed-scaling-experiments.sh  run-single-distributed-experiment.sh  scaling-experiment-single-node.sh  scaling-graph.py  start-distributed-experiments-on-cori.sh  start-node-level-experiments-on-cori.sh
tools/bfilter/: bfilter.cpp
tools/binary_params/: binary_params.cpp
tools/build_scripts/: build-Vc.sh  build-boost.sh  build-silo.sh
tools/compare/: compare.cpp
tools/docker/base_image/: Dockerfile  build-image.bat  prerequisites-clang.dockerfile  prerequisites-gcc.dockerfile  prerequisites-gcc6.dockerfile  prerequisites-gcc7.dockerfile  prerequisites-gcc8.dockerfile  readme.md  start-container.bat
tools/gen_rotating_star_init/: make_bin.cpp
tools/octree-extend/: CMakeLists.txt  full_octree_id.cpp  full_octree_id.py
tools/octree-extend/cmake/: project.vcxproj.user.in
tools/silo_convert/: plain_silo.cpp  silo_convert.cpp  silo_convert.hpp  silo_out.cpp  split_silo.cpp
tools/silo_counter/: silo_counter.cpp
tools/silo_planes/: silo_planes.cpp
tools/silo_post/: silo_post.cpp
tools/size_checker/: size_checker.py
tools/viz-scripts/: README
(+528 files in other folders)
